--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,12 +11,13 @@
     <application
         android:name=".App"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_app_mes_only_circle"
+        android:icon="@mipmap/ic_logo_etics"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/security"
-        android:roundIcon="@mipmap/ic_app_mes_only_circle"
+        android:roundIcon="@mipmap/ic_logo_etics"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
+
         <activity
             android:name=".ui.main.MainActivity"
             android:label="@string/app_name"
@@ -43,6 +44,8 @@
         <activity
             android:name=".ui.auth.register.RegisterActivity"
             android:windowSoftInputMode="stateAlwaysHidden" />
+        <activity android:name=".ui.auth.register_web.RegisterWebActivity"
+            android:label="@string/new_register" />
         <activity
             android:name=".ui.new_payment.NewPaymentActivity"
             android:label="@string/new_payment"
@@ -65,15 +68,12 @@
         <activity
             android:name=".ui.get_boniatos.GetBoniatosActivity"
             android:label="@string/get_boniatos"
-            android:windowSoftInputMode="stateAlwaysHidden" />
-
-        <!-- [START firebase_service] -->
+            android:windowSoftInputMode="stateAlwaysHidden" /> <!-- [START firebase_service] -->
         <service android:name=".messaging.MyFirebaseMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
-        </service>
-        <!-- [END firebase_service] -->
+        </service> <!-- [END firebase_service] -->
         <!-- [START firebase_iid_service] -->
         <service android:name=".messaging.MyFirebaseInstanceIDService">
             <intent-filter>
@@ -83,10 +83,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBzx7rH3fchO0K9rRxjxdDdhrAeJP7hbM8" />
-
-        <!-- <meta-data android:name="firebase_crashlytics_collection_enabled" android:value="false" /> -->
-
+            android:value="AIzaSyBzx7rH3fchO0K9rRxjxdDdhrAeJP7hbM8" /> <!-- <meta-data android:name="firebase_crashlytics_collection_enabled" android:value="false" /> -->
         <activity android:name=".ui.wallet_graphics.GraphicsActivity" />
         <activity
             android:name=".ui.sent_payments.SentPaymentsActivity"
@@ -101,9 +98,10 @@
             </intent-filter>
         </service>
 
-        <activity android:name=".ui.profile.ProfileActivity"
-            android:windowSoftInputMode="stateAlwaysHidden"
-            android:label="@string/account"/>
+        <activity
+            android:name=".ui.profile.ProfileActivity"
+            android:label="@string/account"
+            android:windowSoftInputMode="stateAlwaysHidden" />
     </application>
 
 </manifest>
