--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,83 +20,76 @@
         <activity
             android:name=".ui.BlockActivity"
             android:label="@string/app_name"
-            android:windowSoftInputMode="stateAlwaysHidden"
-            android:screenOrientation="portrait">
+            
+            android:windowSoftInputMode="stateAlwaysHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".ui.main.MainActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait"></activity>
-
+        <activity
+            android:name=".ui.main.MainActivity"
+            android:label="@string/app_name" />
         <activity
             android:name=".ui.entity_info.EntityInfoActivity"
-            android:label="@string/entity_info"
-            android:screenOrientation="portrait"/>
+            android:label="@string/entity_info" />
         <activity
-            android:name=".ui.intro.IntroActivity"
-            android:screenOrientation="portrait" />
+            android:name=".ui.intro.IntroActivity" />
         <activity
             android:name=".ui.recipient_select.RecipientSelectActivity"
             android:label="@string/select_recipient"
-            android:windowSoftInputMode="stateAlwaysHidden"
-            android:screenOrientation="portrait" />
+            android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
             android:name=".ui.auth.login.LoginActivity"
-            android:windowSoftInputMode="stateAlwaysHidden"
-            android:screenOrientation="portrait" />
+            android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
             android:name=".ui.auth.register.RegisterActivity"
-            android:windowSoftInputMode="stateAlwaysHidden"
-            android:screenOrientation="portrait"/>
+            android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
             android:name=".ui.auth.register_web.RegisterWebActivity"
-            android:label="@string/new_register"
-            android:screenOrientation="portrait"/>
+            android:label="@string/new_register" />
         <activity
             android:name=".ui.new_payment.NewPaymentActivity"
             android:label="@string/new_payment"
-            android:windowSoftInputMode="stateAlwaysHidden"
-            android:screenOrientation="portrait" />
+            android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
             android:name=".ui.barcode.BarcodeActivity"
             android:label="@string/qr_code_scan" />
-        <activity android:name=".ui.novelties.detail.NoveltyDetailActivity"
-            android:screenOrientation="portrait" />
-        <activity android:name=".ui.info.WebViewActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".ui.auth.register_web.WebViewRegisterActivity"
-            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.novelties.detail.NoveltyDetailActivity" />
+        <activity
+            android:name=".ui.info.WebViewActivity" />
+        <activity
+            android:name=".ui.auth.register_web.WebViewRegisterActivity" />
         <activity
             android:name=".ui.payments.PaymentsActivity"
-            android:label="@string/pending_payments"
-            android:screenOrientation="portrait" />
+            android:label="@string/pending_payments" />
         <activity
             android:name=".ui.transactions.TransactionsActivity"
-            android:label="@string/transactions"
-            android:screenOrientation="portrait"/>
+            android:label="@string/transactions" />
         <activity
             android:name=".ui.entity_info.gallery.GalleryFullScreenActivity"
             android:configChanges="orientation|screenSize"
-            android:theme="@style/AppTheme.NoActionBar.FullScreen"
-            android:screenOrientation="portrait" />
+            android:theme="@style/AppTheme.NoActionBar.FullScreen" />
         <activity
             android:name=".ui.get_boniatos.GetBoniatosActivity"
             android:label="@string/get_boniatos"
-            android:windowSoftInputMode="stateAlwaysHidden"
-            android:screenOrientation="portrait" />
-
+            android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
             android:name=".ui.profile.ProfileActivity"
             android:label="@string/account"
-            android:windowSoftInputMode="stateAlwaysHidden"
-            android:screenOrientation="portrait" />
+            android:windowSoftInputMode="stateAlwaysHidden" /> <!-- [START firebase_service] -->
 
-        <!-- [START firebase_service] -->
+        <activity android:name=".ui.invitations.InvitationsActivity"
+            android:label="@string/invitations"
+            android:windowSoftInputMode="stateAlwaysHidden" />
+
+        <activity android:name=".ui.wallet_graphics.GraphicsActivity" />
+        <activity
+            android:name=".ui.sent_payments.SentPaymentsActivity"
+            android:label="@string/sent_payments" />
+
         <service android:name=".messaging.MyFirebaseMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
@@ -112,10 +105,6 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBzx7rH3fchO0K9rRxjxdDdhrAeJP7hbM8" /> <!-- <meta-data android:name="firebase_crashlytics_collection_enabled" android:value="false" /> -->
-        <activity android:name=".ui.wallet_graphics.GraphicsActivity" />
-        <activity
-            android:name=".ui.sent_payments.SentPaymentsActivity"
-            android:label="@string/sent_payments" />
 
         <service
             android:name=".messaging.OperationService"
@@ -125,7 +114,6 @@
                 <action android:name="com.callforme.app.ACTION_REJECT_PAYMENT" />
             </intent-filter>
         </service>
-
     </application>
 
 </manifest>
