--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="net.mercadosocial.moneda">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -10,13 +11,14 @@
 
     <application
         android:name=".App"
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_app_mes_only_circle"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/security"
         android:roundIcon="@mipmap/ic_app_mes_only_circle"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar">
+        android:theme="@style/AppTheme.NoActionBar"
+        tools:replace="android:allowBackup">
         <activity
             android:name=".ui.main.MainActivity"
             android:label="@string/app_name"
@@ -26,6 +28,18 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+            <intent-filter android:autoVerify="true"
+                android:label="@string/mes_send_payment">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="https" />
+                <data android:host="app.mercadosocial.net" />
+                <data android:pathPrefix="/qr" />
             </intent-filter>
         </activity>
         <activity
@@ -48,23 +62,12 @@
             android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
             android:name=".ui.auth.register_web.RegisterWebActivity"
-            android:label="@string/new_register" />
+            android:label="@string/new_register"
+            android:windowSoftInputMode="stateAlwaysHidden"/>
         <activity
             android:name=".ui.new_payment.NewPaymentActivity"
             android:label="@string/new_payment"
-            android:parentActivityName=".ui.main.MainActivity"
             android:windowSoftInputMode="stateAlwaysHidden" >
-
-            <intent-filter android:autoVerify="true"
-                android:label="@string/mes_send_payment">
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-
-                <data android:scheme="https" />
-                <data android:host="app.mercadosocial.net" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".ui.barcode.BarcodeActivity"
@@ -88,7 +91,7 @@
         <activity
             android:name=".ui.get_boniatos.GetBoniatosActivity"
             android:label="@string/get_boniatos"
-            android:windowSoftInputMode="stateAlwaysHidden" />
+            android:windowSoftInputMode="stateVisible" />
         <activity
             android:name=".ui.profile.ProfileActivity"
             android:label="@string/account"
@@ -123,8 +126,8 @@
             android:name=".messaging.OperationService"
             android:enabled="true">
             <intent-filter>
-                <action android:name="com.callforme.app.ACTION_ACCEPT_PAYMENT" />
-                <action android:name="com.callforme.app.ACTION_REJECT_PAYMENT" />
+                <action android:name="net.mercadosocial.moneda.ACTION_ACCEPT_PAYMENT" />
+                <action android:name="net.mercadosocial.moneda.ACTION_REJECT_PAYMENT" />
             </intent-filter>
         </service>
     </application>
