--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -120,7 +120,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBzx7rH3fchO0K9rRxjxdDdhrAeJP7hbM8" /> <!-- <meta-data android:name="firebase_crashlytics_collection_enabled" android:value="false" /> -->
+            android:value="@string/google_geo_apikey" /> <!-- <meta-data android:name="firebase_crashlytics_collection_enabled" android:value="false" /> -->
 
         <service
             android:name=".messaging.OperationService"
