--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,15 +22,14 @@
         <activity
             android:name=".ui.main.MainActivity"
             android:label="@string/app_name"
-            
             android:windowSoftInputMode="stateAlwaysHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-            <intent-filter android:autoVerify="true"
+            <intent-filter
+                android:autoVerify="true"
                 android:label="@string/mes_send_payment">
                 <action android:name="android.intent.action.VIEW" />
 
@@ -48,8 +47,7 @@
         <activity
             android:name=".ui.entity_info.EntityInfoActivity"
             android:label="@string/entity_info" />
-        <activity
-            android:name=".ui.intro.IntroActivity" />
+        <activity android:name=".ui.intro.IntroActivity" />
         <activity
             android:name=".ui.recipient_select.RecipientSelectActivity"
             android:label="@string/select_recipient"
@@ -63,21 +61,17 @@
         <activity
             android:name=".ui.auth.register_web.RegisterWebActivity"
             android:label="@string/new_register"
-            android:windowSoftInputMode="stateAlwaysHidden"/>
+            android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
             android:name=".ui.new_payment.NewPaymentActivity"
             android:label="@string/new_payment"
-            android:windowSoftInputMode="stateAlwaysHidden" >
-        </activity>
+            android:windowSoftInputMode="stateAlwaysHidden"></activity>
         <activity
             android:name=".ui.barcode.BarcodeActivity"
             android:label="@string/qr_code_scan" />
-        <activity
-            android:name=".ui.novelties.detail.NoveltyDetailActivity" />
-        <activity
-            android:name=".ui.info.WebViewActivity" />
-        <activity
-            android:name=".ui.auth.register_web.WebViewRegisterActivity" />
+        <activity android:name=".ui.novelties.detail.NoveltyDetailActivity" />
+        <activity android:name=".ui.info.WebViewActivity" />
+        <activity android:name=".ui.auth.register_web.WebViewRegisterActivity" />
         <activity
             android:name=".ui.payments.PaymentsActivity"
             android:label="@string/pending_payments" />
@@ -96,15 +90,16 @@
             android:name=".ui.profile.ProfileActivity"
             android:label="@string/account"
             android:windowSoftInputMode="stateAlwaysHidden" /> <!-- [START firebase_service] -->
-
-        <activity android:name=".ui.invitations.InvitationsActivity"
+        <activity
+            android:name=".ui.invitations.InvitationsActivity"
             android:label="@string/invitations"
             android:windowSoftInputMode="stateAlwaysHidden" />
-
         <activity android:name=".ui.wallet_graphics.GraphicsActivity" />
         <activity
             android:name=".ui.sent_payments.SentPaymentsActivity"
             android:label="@string/sent_payments" />
+        <activity android:name=".ui.profile.pincode_change.PincodeChangeActivity"
+            android:label="@string/change_pincode" />
 
         <service android:name=".messaging.MyFirebaseMessagingService">
             <intent-filter>
@@ -121,7 +116,6 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_geo_apikey" /> <!-- <meta-data android:name="firebase_crashlytics_collection_enabled" android:value="false" /> -->
-
         <service
             android:name=".messaging.OperationService"
             android:enabled="true">
