--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,10 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath 'com.android.tools.build:gradle:3.5.2'
         classpath 'me.tatarka:gradle-retrolambda:3.2.4'
         classpath 'com.google.gms:google-services:4.0.1'
-        classpath 'io.fabric.tools:gradle:1.+'
+        classpath 'io.fabric.tools:gradle:1.31.1'
 
 
         // NOTE: Do not place your application dependencies here; they belong
