--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,11 +52,11 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v13:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.4.0'
     implementation 'com.squareup.okhttp:logging-interceptor:2.6.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.4.0'
 
 //    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'io.reactivex:rxandroid:1.2.1'
@@ -64,11 +64,11 @@ dependencies {
 //    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 //    implementation 'io.reactivex.rxjava2:rxjava:2.1.1'
 
-    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'agency.tango.android:material-intro-screen:0.0.5'
     implementation 'com.karumi:dexter:6.0.0'
     implementation 'com.alimuzaffar.lib:pinentryedittext:1.3.1'
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13.2'
 
     implementation 'com.malinskiy:superrecyclerview:1.1.4'
 
@@ -77,9 +77,12 @@ dependencies {
     implementation 'com.github.GrenderG:Toasty:1.3.0'
     implementation 'jp.wasabeef:recyclerview-animators:2.3.0'
 
-    implementation 'com.google.android.gms:play-services-vision:11.8.0'
-    implementation 'com.google.android.gms:play-services-maps:16.1.0'
-    implementation 'com.google.maps.android:android-maps-utils:0.5'
+
+    implementation('com.journeyapps:zxing-android-embedded:4.2.0') { transitive = false }
+    implementation 'com.google.zxing:core:3.3.1'
+
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
+    implementation 'com.google.maps.android:android-maps-utils:0.6.2'
 
 
     implementation platform('com.google.firebase:firebase-bom:26.8.0')
@@ -87,7 +90,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-config'
     implementation 'com.google.firebase:firebase-crashlytics'
 
-    implementation 'androidx.multidex:multidex:2.0.0'
+    implementation 'androidx.multidex:multidex:2.0.1'
 
     implementation 'com.budiyev.android:code-scanner:1.7.5'
     implementation 'com.github.kenglxn.QRGen:android:2.4.0'
@@ -97,7 +100,7 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 
     // Lifecycles only (no ViewModel or LiveData)
-    def lifecycle_version = "2.0.0"
+    def lifecycle_version = "2.2.0"
     implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
