--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CAMERA" />
 
+    <uses-sdk tools:overrideLibrary="com.google.zxing.client.android" />
+
     <application
         android:name=".App"
         android:allowBackup="false"
@@ -117,6 +119,11 @@
         <activity android:name=".ui.profile.pincode_change.PincodeChangeActivity"
             android:screenOrientation="portrait"
             android:label="@string/change_pincode" />
+
+        <activity
+            android:name="com.journeyapps.barcodescanner.CaptureActivity"
+            android:screenOrientation="portrait"
+            tools:replace="screenOrientation" />
 
         <service android:name=".messaging.MyFirebaseMessagingService">
             <intent-filter>
