--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,14 +8,14 @@ apply plugin: 'com.google.firebase.crashlytics'
 
 android {
 
-    compileSdkVersion 33
+    compileSdk 33
 
     defaultConfig {
         applicationId "net.mercadosocial.moneda"
         minSdkVersion 19
         targetSdkVersion 33
-        versionCode 313
-        versionName "3.1.3"
+        versionCode 320
+        versionName "3.2.0"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true //important
