--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.4.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.9.0'
     implementation 'com.squareup.okhttp:logging-interceptor:2.6.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
 
@@ -115,6 +116,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
 }
 
