--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,12 +8,12 @@ apply plugin: 'com.google.firebase.crashlytics'
 
 android {
 
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "net.mercadosocial.moneda"
         minSdkVersion 19
-        targetSdkVersion 33
+        targetSdkVersion 34
         versionCode 321
         versionName "3.2.1"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
@@ -61,15 +61,15 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava:2.4.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.9.0'
     implementation 'com.squareup.okhttp:logging-interceptor:2.6.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
 
     implementation 'io.reactivex:rxandroid:1.2.1'
-    implementation 'io.reactivex:rxjava:1.3.0'
+    implementation 'io.reactivex:rxjava:1.3.8'
 
     implementation 'com.squareup.picasso:picasso:2.8'
+    implementation "androidx.browser:browser:1.8.0"
     implementation 'agency.tango.android:material-intro-screen:0.0.5'
     implementation 'com.karumi:dexter:6.0.0'
     implementation 'com.alimuzaffar.lib:pinentryedittext:1.3.1'
