--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,8 @@ android {
         applicationId "net.mercadosocial.moneda"
         minSdkVersion 19
         targetSdkVersion 34
-        versionCode 413
-        versionName "4.1.3"
+        versionCode 414
+        versionName "4.1.4"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true //important
@@ -108,6 +108,8 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 
     implementation 'com.github.jkwiecien:EasyImage:3.2.0'
+
+    implementation "androidx.preference:preference:1.2.1"
 
     // Lifecycles only (no ViewModel or LiveData)
     def lifecycle_version = "2.2.0"
