--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,8 @@ android {
         applicationId "net.mercadosocial.moneda"
         minSdkVersion 19
         targetSdkVersion 34
-        versionCode 416
-        versionName "4.1.6"
+        versionCode 418
+        versionName "4.1.8"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true //important
@@ -91,7 +91,7 @@ dependencies {
     implementation 'com.google.maps.android:android-maps-utils:0.6.2'
 
     // Update app view
-    implementation 'com.google.android.play:core:1.10.3'
+    implementation 'com.google.android.play:app-update:2.1.0'
     implementation "androidx.work:work-runtime:2.8.1"
     implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
 
