--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:8.3.0'
         classpath 'com.google.gms:google-services:4.4.1'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.6'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.0'
 
 
         // NOTE: Do not place your application dependencies here; they belong
