--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,10 +13,10 @@ android {
 
     defaultConfig {
         applicationId "net.mercadosocial.moneda"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 34
-        versionCode 418
-        versionName "4.1.8"
+        versionCode 421
+        versionName "4.2.1"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true //important
@@ -74,6 +74,7 @@ dependencies {
     implementation 'agency.tango.android:material-intro-screen:0.0.5'
     implementation 'com.karumi:dexter:6.0.0'
     implementation 'com.alimuzaffar.lib:pinentryedittext:1.3.1'
+    implementation project(':update-app-view')
     testImplementation 'junit:junit:4.13.2'
 
     implementation 'com.malinskiy:superrecyclerview:1.1.4'
