--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,15 +52,20 @@ android {
     buildFeatures {
         buildConfig = true
     }
+
+    androidResources {
+        generateLocaleConfig true
+    }
+
 }
 
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
-    implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'androidx.vectordrawable:vectordrawable:1.2.0'
     implementation 'androidx.legacy:legacy-support-v13:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
@@ -97,7 +102,8 @@ dependencies {
     // Update app view
     implementation 'com.google.android.play:core:1.10.3'
     implementation "androidx.work:work-runtime:2.8.1"
-    implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
+    implementation 'com.google.guava:guava:33.2.1-android'
+
 
     implementation platform('com.google.firebase:firebase-bom:32.7.4')
     implementation 'com.google.firebase:firebase-messaging'
