--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -124,6 +124,16 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_geo_apikey" /> <!-- <meta-data android:name="firebase_crashlytics_collection_enabled" android:value="false" /> -->
 
+
+        <service
+            android:name="androidx.appcompat.app.AppLocalesMetadataHolderService"
+            android:enabled="false"
+            android:exported="false">
+            <meta-data
+                android:name="autoStoreLocales"
+                android:value="true" />
+        </service>
+
     </application>
 
 </manifest>
