--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,8 +17,8 @@ android {
         applicationId "net.mercadosocial.moneda"
         minSdkVersion 21
         targetSdkVersion 34
-        versionCode 451
-        versionName "4.5.1"
+        versionCode 452
+        versionName "4.5.2"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true //important
@@ -108,10 +108,7 @@ dependencies {
     implementation 'com.google.maps.android:android-maps-utils:0.6.2'
 
     // Update app view
-    implementation 'com.google.android.play:core:1.10.3'
-    implementation "androidx.work:work-runtime:2.8.1"
-    implementation 'com.google.guava:guava:33.2.1-android'
-
+    implementation 'com.triskelapps:simpleappupdate:0.1.4'
 
     implementation platform('com.google.firebase:firebase-bom:32.7.4')
     implementation 'com.google.firebase:firebase-messaging'
