--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,8 +17,8 @@ android {
         applicationId "net.mercadosocial.moneda"
         minSdkVersion 21
         targetSdkVersion 34
-        versionCode 452
-        versionName "4.5.2"
+        versionCode 456
+        versionName "4.5.6"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true //important
@@ -32,6 +32,12 @@ android {
         debug {
             applicationIdSuffix ".debug"
             versionNameSuffix " debug"
+        }
+    }
+
+    bundle {
+        language {
+            enableSplit = false
         }
     }
 
@@ -62,6 +68,7 @@ android {
     androidResources {
         generateLocaleConfig true
     }
+
 
 }
 
